<resources>
    <string name="app_name">Continent</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="desc_app">Ask your any question for Expert and get Solution for your Problem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_progress">Loading…</string>
    <string name="default_verify_phone">Verify +380911111</string>
    <string name="continue_button">Continue</string>
    <string name="desc_user">Type about yourself</string>
    <string name="name_user">Type your Name</string>
    <string name="desc_setup_profile">Please set you name, description and an optional Profile Image</string>
    <string name="profile_inform">Profile Information</string>
    <string name="setup_profile_button">Setup Profile</string>
</resources>